Task-1 [+][tbz] Part.2

--- a/MCRX/Applications/DataViewer/DataViewer/Views/StartupWindow.xaml
+++ b/MCRX/Applications/DataViewer/DataViewer/Views/StartupWindow.xaml
@@ -4,8 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DataViewer.Views"
-        xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:xcdg="http://schemas.xceed.com/wpf/xaml/datagrid" 
         xmlns:Models="clr-namespace:DataModel.Models;assembly=DataModel" 
         xmlns:ViewModels="clr-namespace:DataViewer.ViewModels" 
         x:Class="DataViewer.Views.StartupWindow"
@@ -13,30 +11,29 @@
         Title="StartupWindow" Height="450" Width="550">
 
     <Grid>
-        <xcdg:DataGridControl  Name="PersonGrid" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="345" Width="480" IsEnabled="True" ItemsSource="{Binding PersonGrid}" >
-            <xcdg:DataGridControl.DataContext>
+        <DataGrid ItemsSource="{Binding PersonGrid, Mode=TwoWay}"  AutoGenerateColumns="False" PreviewKeyUp="DataGrid_PreviewKeyUp" >
+            <DataGrid.DataContext>
                 <ViewModels:Presenter/>
-            </xcdg:DataGridControl.DataContext>
-            <xcdg:DataGridControl.Columns>
-                <xcdg:Column FieldName="FirstName" Title="FirstName" AllowSort="True"/>
-                <xcdg:Column FieldName="LastName" Title="LastName" AllowSort="True"/>
-                <xcdg:Column FieldName="StreetName" Title="StreetName" AllowGroup="True" AllowSort="True"/>
-                <xcdg:Column FieldName="HouseNumber" Title="HouseNumber" AllowSort="True"/>
-                <xcdg:Column FieldName="ApartmentNumber" Title="ApartmentNumber" />
-                <xcdg:Column FieldName="PostalCode" Title="PostalCode" AllowGroup="True" AllowSort="True"/>
-                <xcdg:Column FieldName="PhoneNumber" Title="PhoneNumber" AllowSort="True"/>
-                <xcdg:Column FieldName="DayOfBirth" Title="DayOfBirth" AllowGroup="True" AllowSort="True"/>
-                <xcdg:Column FieldName="Age" Title="Age" ReadOnly="True" AllowGroup="True" AllowSort="True"/>
-                <xcdg:Column FieldName="Id" Title="Id" Visible="False"/>
-            </xcdg:DataGridControl.Columns>
-        </xcdg:DataGridControl>
+            </DataGrid.DataContext>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="FirstName" Binding="{Binding Path = FirstName, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="LastName" Binding="{Binding Path = LastName, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="StreetName" Binding="{Binding Path = StreetName, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="HouseNumber" Binding="{Binding Path = HouseNumber, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="ApartmentNumber" Binding="{Binding Path = ApartmentNumber, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="PostalCode" Binding="{Binding Path = PostalCode, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="PhoneNumber" Binding="{Binding Path = PhoneNumber, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="DayOfBirth" Binding="{Binding Path = DayOfBirth, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Header="Age" Binding="{Binding Path = Age, UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True"/>
+            </DataGrid.Columns>
+        </DataGrid>
 
-        <Button x:Name="Save" Content="Save" HorizontalAlignment="Left" Margin="10,365,0,0" VerticalAlignment="Top" Width="75" Command="{Binding SaveCommand}">
+        <Button x:Name="Save" Content="Save" HorizontalAlignment="Left" Margin="10,365,0,0" VerticalAlignment="Top" Width="75" Command="{Binding SaveCommand}" IsEnabled="False">
             <Button.DataContext>
                 <ViewModels:Presenter/>
             </Button.DataContext>
         </Button>
-        <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="90,365,0,0" VerticalAlignment="Top" Width="75" Command="{Binding CancelCommand}">
+        <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="90,365,0,0" VerticalAlignment="Top" Width="75" Command="{Binding CancelCommand}" IsEnabled="False">
             <Button.DataContext>
                 <ViewModels:Presenter/>
             </Button.DataContext>
